results/SVCOMP/specgen/log-ExSymExeTestClassFields-2024_03_07_15_45_39.txt
class Main {
  static int field;
  int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:13: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures field == 0 && field2 == 0 ==> \result == true;
              ^
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:13: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures field == 0 && field2 == 0 ==> \result == true;
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:14: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
                ^
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:14: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
                              ^
5 errors

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == (new Main()).test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (new Main()).test();
                          ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == (new Main()).test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (new Main()).test();
                          ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return new Main().test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == (new Main()).test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (new Main()).test();
                          ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return new Main().test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == (new Main()).test();
  public static boolean f(int arg) {
    if (arg == 2)
      return (new Main()).test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: Object allocation is not permitted in specification expressions
  //@ ensures \result == (new Main()).test();
                          ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();
  public static boolean f(int arg) {
    if (arg == 2)
      return new Main().test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
  //@ ensures \result == test();  
  public static boolean f(int arg) {
    if (arg == 2)
      return new Main().test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}

/home/max/Documents/JMLGPT/tmp/ExSymExeTestClassFields.java:6: error: non-static method test() cannot be referenced from a static context
  //@ ensures \result == test();  
                         ^
1 error

class Main {
  static /*@ spec_public @*/ int field;
  /*@ spec_public @*/ int field2;

  //@ requires arg == 2;
 
  public static boolean f(int arg) {
    if (arg == 2)
      return new Main().test();
    return true;
  }

  //@ ensures field == 0 && field2 == 0 ==> \result == true;
  //@ ensures !(field == 0 && field2 == 0) ==> \result == false;
  public boolean test() {
    if (field == 0 && field2 == 0) System.out.println("br 0");
    else {
      return false;
    }
    return true;
  }
}


